--- a/src/components/Eventi/events.css
+++ b/src/components/Eventi/events.css
@@ -68,11 +68,11 @@ section {
 
 @media screen and (max-width: 576px) {
     .cardLandingPage1 {
-        width: 400px;
+        width: 300px;
         height: 500px;
         box-shadow: 3px 3px 20px 0px rgb(47, 1, 1);
         border-radius: 50px;
-        padding: auto;
+        padding: 0;
     }
     
     .fixImgCardHome1 {
@@ -87,7 +87,14 @@ section {
     }
 
     .fixImgCardHome1:hover {
+        max-width: 300px;
         text-align: center;
+    }
+    .cardLandingPage1:hover {
+        max-width: 300px;
+        text-align: center;
+        margin: 0 0;
+        padding: 0 0;
     }
 
 }
@@ -261,7 +268,7 @@ section {
 
     .cardSingleColSelect1:hover {
         transition: 1.5s;
-        max-width: 320px;
+        max-width: 520px;
 
     }
 }
@@ -275,15 +282,14 @@ section {
 
 
     .cardSingleColSelect1 {
-        max-width: 300px;
+        max-width: 250px;
 
     }
 
     .cardSingleColSelect1:hover {
         transition: 1.5s;
-        max-width: 400px;
-        margin: 0 50px;
-        padding: 0 60px;
+        max-width: 270px;
+        
     }
 }
 
@@ -294,7 +300,7 @@ section {
     }
     .contentCard2bis:hover {
         text-align: center;
-
+        
 
     }
 }
@@ -311,4 +317,16 @@ section {
     text-shadow: 2px 2px 22px rgb(130, 103, 103);
     transition: 1s;
     
+}
+
+
+
+.resizeBox{
+    width: auto;
+}
+
+@media screen and (max-width: 576px) {
+    .resizeBox {
+        width: 250px;
+    }
 }
